# SIXSA

./: .gitignore  README.md  main.py  mri_config_cstat_restrictor.yml  pyproject.toml  run_mri.py  run_mri_v0.py  run_mri_with_cstat_restrictor.py  run_sri.py  run_sri_v1.py  sixsa_utils.py  utils.py
Reference_spectra/: Reference_pha_tbabs_powerlaw_200000counts.pha  Reference_pha_tbabs_powerlaw_200000counts_groupconstant_5.pha  Reference_pha_tbabs_powerlaw_2000counts.pha  Reference_pha_tbabs_powerlaw_bbodyrad_200000counts_groupconstant_5.pha  Reference_pha_tbabs_powerlaw_bbodyrad_2000counts_groupconstant_5.pha  pre_burst_Tint200_raw.arf
SISXA_YML_INPUT_FILES/: 1_mri_config_cmin_cmax_restrictor_spectrum_2000.yml  1_sri_config_cmin_cmax_restrictor_spectrum_20000.yml  2_mri_config_coarse_inference_restrictor_real_data_spectrum.yml  2_sri_config_cmin_cmax_restrictor_spectrum_2000.yml  3_mri_config_cmin_cmax_restrictor_real_data_burst_spectrum.yml  3_sri_config_coarse_inference_restrictor_spectrum_20000.yml  4_mri_config_cstat_restrictor_real_data_spectrum.yml  4_sri_config_coarse_inference_restrictor_real_data_spectrum.yml  5_mri_config_cmin_cmax_restrictor_spectrum_2000_with_summary.yml  5_sri_config_cmin_cmax_restrictor_real_data_spectrum.yml  6_sri_config_cmin_cmax_restrictor_real_data_burst_spectrum.yml  7_sri_config_coarse_inference_restrictor_real_data_burst_spectrum.yml  mri_config_cstat_restrictor_real_data.yml  mri_config_spectrum_2000.yml  sri_config_coarse_inference_restrictor_real_data.yml  sri_config_coarse_inference_restrictor_spectrum_20000.yml
(+30 files in other folders)
