[tool.poetry]
name = "SIXSA"
version = "0.0.1"
description = "Simulation based Inference for X-ray Spectral Analysis"
authors = ["Didier Barret <dbarret@irap.omp.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sbi = "^0.22.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
dill = "^0.3.7"
click = "^8.1.7"
torch = "^2.1.1"
jax = {extras = ["cpu"], version = "0.4.23"}
ppretty = "^1.3"
jaxspec = "^0.0.2"
scipy = "<1.13"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
